fix upsert with addToSet SERVER-630